--- a/www/template/user/login.html
+++ b/www/template/user/login.html
@@ -40,7 +40,12 @@
 					echo '<img src="'.$loginimage.'" />';
 				?>
 				</div>
-			<div class='info'>——<?php echo $L['secros_name_desc'];?></div>
+			<div class='info' <?php 
+			if (isset($oem) == 'jiangmin'){
+				echo "style=display:none;";
+			}
+			echo '';
+			?> >——<?php echo $L['secros_name_desc'];?></div>
 		</div>
 		<div class="form">
 			<div class="inputs">
