--- a/www/template/user/login.html
+++ b/www/template/user/login.html
@@ -44,8 +44,7 @@
 			if (isset($oem) == 'jiangmin'){
 				echo "style=display:none;";
 			}
-			echo '';
-			?> >——<?php echo $L['secros_name_desc'];?></div>
+			echo '';?> >——<?php echo $L['secros_name_desc'];?></div>
 		</div>
 		<div class="form">
 			<div class="inputs">
