--- a/www/static/style/skin/metro/jiangmin_app_explorer.css
+++ b/www/static/style/skin/metro/jiangmin_app_explorer.css
@@ -618,3 +618,432 @@ html { overflow-x: hidden; overflow-y: hidden;}
 .frame-main .frame-right .dropdown-menu a:hover,.frame-main .frame-right .dropdown-menu .this a { background: #5db2ff; color: #fff; filter: none;}
 .frame-main .frame-right .bodymain { position: absolute; zoom: 1; z-index: 0; top: 35px; bottom: 0; left: 0; overflow: auto; width: 100%; -khtml-user-select: none; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; -o-user-select: none; user-select: none;}
 .fileList_icon div.file { transition: all 0.2s ease 0s;}
+.download_modal{
+    width:360px;height:360px;display:flex;overflow:auto;
+}
+.download_modal  .ztree li a{
+   border: none!important;
+}
+
+   
+.updateframe{
+    position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        z-index: 999;
+  }
+    
+    .updateframe_flex {
+      display: flex;
+      flex-direction: column;
+      max-width: 800px;
+      overflow: hidden;
+      justify-content: center;
+      align-items: center;
+      width: 80%;
+      height: 60%;
+      background: rgb(193, 209, 234);
+      position: relative;
+  }
+  .updateframe_flex .loading_btn_frame{
+    position: absolute;bottom:0;left:0;width:100%;height:64px;justify-content: center;align-items: center;display: flex;
+  }
+  .updateframe_flex .loading_btn{
+    text-decoration: none;
+    cursor: pointer;
+    font-size: 16px;
+    display: inline-block;
+    border: 1px solid #ddd;
+    text-shadow: none;
+    box-shadow: none;
+    text-align: center;
+    font-weight: 400;
+    padding: 4px 22px;
+    background: #5db2ff;
+    color: #fff;
+  }
+  .updateprogress {
+      height: 16px;
+      box-shadow: inset 0 0 3px #000;
+      padding: 5px;
+      overflow: visible;
+      border-radius: 20px;
+      margin-top: 50px;
+      width: 80%;
+      z-index: 99;
+  }
+  
+  .updateprogress .updateprogress_bar {
+      border-radius: 20px;
+      position: relative;
+      float: left;
+      height: 100%;
+      font-size: 12px;
+      line-height: 20px;
+      color: #fff;
+      text-align: center;
+      background-color: rgb(51, 102, 255);
+      box-shadow: 0 0 12px #5b94de;
+      animation: progress_bar_shink 3s linear infinite;
+  }
+  
+  .updateprogress .updateprogress_value {
+      display: block;
+      padding: 3px 7px;
+      font-size: 13px;
+      color: #fff;
+      border-radius: 4px;
+      background: #191919;
+      border: 1px solid #000;
+      position: absolute;
+      top: -40px;
+      right: -22px;
+      width: 34px;
+      text-align: center;
+  }
+  
+  .updateprogress .updateprogress_value:after {
+      content: "";
+      border-top: 10px solid #191919;
+      border-left: 10px solid transparent;
+      border-right: 10px solid transparent;
+      position: absolute;
+      bottom: -6px;
+      left: 25%;
+  }
+#update_text{
+    padding-top: 32px;z-index: 99;font-size:16px;
+}
+.updateloading {
+    width: 120px;
+    height: 50px;
+    z-index: 99;
+    position: relative;
+  }
+  
+  .updateloading>div:nth-child(2) {
+    -webkit-animation: pacman-balls 1s 0s infinite linear;
+    animation: pacman-balls 1s 0s infinite linear;
+  }
+  
+  .updateloading>div:nth-child(3) {
+    -webkit-animation: pacman-balls 1s 0.33s infinite linear;
+    animation: pacman-balls 1s 0.33s infinite linear;
+  }
+  
+  .updateloading>div:nth-child(4) {
+    -webkit-animation: pacman-balls 1s 0.66s infinite linear;
+    animation: pacman-balls 1s 0.66s infinite linear;
+  }
+  
+  .updateloading>div:nth-child(5) {
+    -webkit-animation: pacman-balls 1s 0.99s infinite linear;
+    animation: pacman-balls 1s 0.99s infinite linear;
+  }
+  
+  .updateloading>div:first-of-type {
+    width: 0px;
+    height: 0px;
+    border-right: 25px solid transparent;
+    border-top: 25px solid rgb(51, 102, 255);
+    border-left: 25px solid rgb(51, 102, 255);
+    border-bottom: 25px solid rgb(51, 102, 255);
+    border-radius: 25px;
+    -webkit-animation: rotate_pacman_half_up 0.5s 0s infinite;
+    animation: rotate_pacman_half_up 0.5s 0s infinite;
+  }
+  
+  .updateloading>div:first-of-type::after {
+    position: relative;
+    content: "";
+    width: 10px;
+    height: 10px;
+    background-color: #333;
+    left: 0px;
+    top: -20px;
+    border-radius: 100%;
+    z-index: 9999;
+  }
+  
+  .updateloading>div:nth-child(2) {
+    width: 0px;
+    height: 0px;
+    border-right: 25px solid transparent;
+    border-top: 25px solid rgb(51, 102, 255);
+    border-left: 25px solid rgb(51, 102, 255);
+    border-bottom: 25px solid rgb(51, 102, 255);
+    border-radius: 25px;
+    -webkit-animation: rotate_pacman_half_down 0.5s 0s infinite;
+    animation: rotate_pacman_half_down 0.5s 0s infinite;
+    margin-top: -50px;
+  }
+  
+  .updateloading>div:nth-child(3),
+  .updateloading>div:nth-child(4),
+  .updateloading>div:nth-child(5){
+    background-color: rgb(51, 102, 255);
+    border-radius: 100%;
+    margin: 2px;
+    width: 10px;
+    height: 10px;
+    position: absolute;
+    -webkit-transform: translate(0, -6.25px);
+    -ms-transform: translate(0, -6.25px);
+    transform: translate(0, -6.25px);
+    top: 25px;
+    left: 100px;
+  }
+  
+  @keyframes pacman-balls {
+    75% {
+        opacity: 0.7;
+    }
+  
+    100% {
+        -webkit-transform: translate(-100px, -6.25px);
+        transform: translate(-100px, -6.25px);
+    }
+  }
+  
+  @keyframes rotate_pacman_half_up {
+    0% {
+        -webkit-transform: rotate(270deg);
+        transform: rotate(270deg);
+    }
+  
+    50% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+  
+    100% {
+        -webkit-transform: rotate(270deg);
+        transform: rotate(270deg);
+    }
+  }
+  
+  @keyframes rotate_pacman_half_down {
+    0% {
+        -webkit-transform: rotate(90deg);
+        transform: rotate(90deg);
+    }
+  
+    50% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+  
+    100% {
+        -webkit-transform: rotate(90deg);
+        transform: rotate(90deg);
+    }
+  }
+
+.canvasframe{
+    position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        z-index: 999;
+  }
+    
+    .canvasframe_flex {
+      display: flex;
+      flex-direction: column;
+      max-width: 800px;
+      overflow: hidden;
+      justify-content: center;
+      align-items: center;
+      width: 80%;
+      height: 60%;
+      background: rgb(193, 209, 234);
+      position: relative;
+  }
+  .canvasframe_flex .loading_btn_frame{
+    position: absolute;bottom:0;left:0;width:100%;height:64px;justify-content: center;align-items: center;display: flex;
+  }
+  .canvasframe_flex .loading_btn{
+    text-decoration: none;
+    cursor: pointer;
+    font-size: 16px;
+    display: inline-block;
+    border: 1px solid #ddd;
+    text-shadow: none;
+    box-shadow: none;
+    text-align: center;
+    font-weight: 400;
+    padding: 4px 22px;
+    background: #5db2ff;
+    color: #fff;
+  }
+  .progress {
+      height: 16px;
+      box-shadow: inset 0 0 3px #000;
+      padding: 5px;
+      overflow: visible;
+      border-radius: 20px;
+      margin-top: 50px;
+      width: 80%;
+      z-index: 99;
+  }
+  
+  .progress .progress_bar {
+      border-radius: 20px;
+      position: relative;
+      float: left;
+      height: 100%;
+      font-size: 12px;
+      line-height: 20px;
+      color: #fff;
+      text-align: center;
+      background-color: rgb(51, 102, 255);
+      box-shadow: 0 0 12px #5b94de;
+      animation: progress_bar_shink 3s linear infinite;
+  }
+  
+  .progress .progress_value {
+      display: block;
+      padding: 3px 7px;
+      font-size: 13px;
+      color: #fff;
+      border-radius: 4px;
+      background: #191919;
+      border: 1px solid #000;
+      position: absolute;
+      top: -40px;
+      right: -22px;
+      width: 34px;
+      text-align: center;
+  }
+  
+  .progress .progress_value:after {
+      content: "";
+      border-top: 10px solid #191919;
+      border-left: 10px solid transparent;
+      border-right: 10px solid transparent;
+      position: absolute;
+      bottom: -6px;
+      left: 25%;
+  }
+  
+  @keyframes progress_bar_shink {
+      0% {
+          opacity: 1;
+      }
+  
+      50% {
+          opacity: .8;
+      }
+  
+      100% {
+          opacity: 1;
+      }
+  }
+  
+  
+@keyframes radar {
+	to {
+		transform: rotateZ(360deg);
+	}
+}
+
+@keyframes boo {
+	0%,
+	100% {
+		opacity: .5;
+		transform: scale(1) rotateZ(-150deg);
+	}
+	80% {
+		opacity: 0;
+		transform: scale(0) rotateZ(-150deg);
+	}
+}
+
+
+
+.radar,.radar div{
+	position: absolute;
+	border-radius: 1000rem;
+}
+
+.radar{
+	overflow: hidden; /* shame */
+    width: 160px;
+    height: 160px;
+    z-index: 99;
+    position: relative;
+	background-color: rgb(10,86,250);
+	background-image:
+	linear-gradient(90deg, rgba(255, 255, 255, .1) 1px, transparent 1px)
+	,	linear-gradient(rgba(255, 255, 255, .1) 1px, transparent 1px)
+	,	repeating-radial-gradient(closest-side, transparent, rgba(255, 255, 255, .3) 1px, transparent 1px, transparent 10px)
+	,	radial-gradient(circle, rgba(0, 0, 0, .3), transparent);
+	background-size: 1px 160px,160px 1px, cover, cover;
+	background-position: 50% 50%;
+	background-repeat: no-repeat;
+	border:6px solid rgba(0,242,254,.5);
+	box-shadow:0 0 6px rgba(0,242,254,.3);
+}
+
+.radar_ani{
+animation: radar 2s linear infinite;
+}
+
+.boo_ani{
+animation: boo  4s  infinite;
+}
+
+.radar .rad1{
+	content: "";
+	width: 100%;
+	height: 100%;
+	background-image: 
+		linear-gradient(90deg, rgba(255, 255, 255, .8), transparent 1px)
+	,	linear-gradient(45deg, rgba(255, 255, 255, .1), transparent);
+	background-position: 100% 100%;
+	background-size: 50% 50%;
+	background-repeat: no-repeat;
+
+}
+
+.radar .rad2{
+	width: 100%;
+	height: 100%;
+	background: rgba(3, 122, 133, 0.8);
+}
+
+.infected_txt{
+    height: 62px; width: 100%; text-align: center; font-size: 16px; margin-top: 16px;
+}
+.file_loading{
+    position: fixed; top: 0; left: 0; width: 100%; height: 100%;display: flex;justify-content: center;align-items: center;z-index: 1001;
+}
+.file_loading .file_loading_sf{
+    background: #000;
+    opacity: 0.6;
+    margin: 0 auto;
+    color: #FFF;
+    border-radius: 6px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 70px;
+    padding:6px 20px;
+}
+.file_loading  .file_loading_sf div{
+    border-radius: 6px;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    font-size: 0;
+}
