--- a/www/static/style/skin/metro/jiangmin_app_setting.css
+++ b/www/static/style/skin/metro/jiangmin_app_setting.css
@@ -513,3 +513,30 @@ input[type=checkbox]:focus{
     box-shadow: none!important;
     outline: none!important;
 }
+.upload_file_btn{
+    text-decoration: none;
+    cursor: pointer;
+    font-size: 16px;
+    display: inline-block;
+    border: 1px solid #ddd;
+    text-shadow: none;
+    box-shadow: none;
+    text-align: center;
+    font-weight: 400;
+    padding: 4px 22px;
+    background: #5db2ff;
+    color: #fff;
+    flex-shrink: 0;
+}
+
+.select_file_name{
+height: 99%;
+width: 240px;
+box-shadow: inset 0 0 1px #000;
+display: flex;
+align-items: center;
+}
+.btn_no_drop{
+    background: #ccc!important;
+    cursor: no-drop!important;
+}
