--- a/www/template/common/navbar.html
+++ b/www/template/common/navbar.html
@@ -31,9 +31,11 @@
 	<a href="javascript:core.downLoad();"><img src="<?php echo STATIC_PATH;?>images/tools.png"></a>
 	</div>
 
+	<?php if ($GLOBALS['is_root'] == 1) {?>
       <div class="menu_group">
               <a href="javascript:core.openLog();"><img src="<?php echo STATIC_PATH;?>images/log.png"></a>
-      </div>  
+	  </div>  
+	  <?php }?>
 			<div class="menu_group">
 				<a href="./index.php?user/logout"><img src="<?php echo STATIC_PATH;?>images/exit.png"></a>
 			</div>
