--- a/www/static/style/skin/metro/leaf_app_explorer.css
+++ b/www/static/style/skin/metro/leaf_app_explorer.css
@@ -618,3 +618,52 @@ html { overflow-x: hidden; overflow-y: hidden;}
 .frame-main .frame-right .dropdown-menu a:hover,.frame-main .frame-right .dropdown-menu .this a { background: #03B3B2; color: #fff; filter: none;}
 .frame-main .frame-right .bodymain { position: absolute; zoom: 1; z-index: 0; top: 35px; bottom: 0; left: 0; overflow: auto; width: 100%; -khtml-user-select: none; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; -o-user-select: none; user-select: none;}
 .fileList_icon div.file { transition: all 0.2s ease 0s;}
+
+/*  20200602new */
+.av_details{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    z-index: 1000;
+  }
+  .av_flex{
+    display: flex;
+      flex-direction: column;
+      max-width: 800px;
+      overflow: hidden;
+      align-items: center;
+      width: 80%;
+      height: 60%;
+      background: rgb(193, 209, 234);
+      position: relative;
+  }
+  .av_flex .av_title{
+    width:90%;height:10%;display:flex;font-size:16px;justify-content: space-between;
+  }
+  .av_flex .av_title div{
+    width:30%;display: flex;justify-content: center;align-items: center;text-align: center;
+  }
+  .av_flex .av_content{
+    width:90%;height:60%;overflow:auto;background:#fff;
+  }
+  .av_flex .av_content .list{
+    display: flex;width: 100%;justify-content:space-between;border-bottom: 1px solid #ccc;
+  }
+  .av_flex .av_content .list div{
+    width: 30%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    font-size: 16px;
+    margin: 16px 0;
+    padding-left: 18px;
+    word-break: break-all;
+  }
+  .av_hidden{
+    position: absolute;right:16px;top:16px;cursor: pointer;
+  }
