--- a/www/static/style/skin/metro/purple_app_log.css
+++ b/www/static/style/skin/metro/purple_app_log.css
@@ -512,13 +512,14 @@ body { -khtml-user-select: text; -webkit-user-select: text; -moz-user-select: te
     box-shadow: none;
     border: 1px solid #bbb;
     padding: 8px;
-    font-family: 'Helvetica Neue', "Microsoft Yahei", "微软雅黑", "STXihei", "WenQuanYi Micro Hei", sans-serif;
 }
 .fliterdiog select{
-    font-family: 'Helvetica Neue', "Microsoft Yahei", "微软雅黑", "STXihei", "WenQuanYi Micro Hei", sans-serif;
     padding: 8px;
     font-weight: 200;
     width: 220px;
+    border: 1px solid #bbb!important;
+    box-shadow: none!important;
+    outline: none!important;
 }
 .f_row{
     display: flex;
@@ -540,5 +541,4 @@ body { -khtml-user-select: text; -webkit-user-select: text; -moz-user-select: te
     margin-right: 10px;
     line-height: 32px;
     color: #333;
-    font-family: 'Helvetica Neue', "Microsoft Yahei", "微软雅黑", "STXihei", "WenQuanYi Micro Hei", sans-serif;
 }
