--- a/www/static/style/skin/metro/app_explorer.css
+++ b/www/static/style/skin/metro/app_explorer.css
@@ -1176,3 +1176,113 @@ animation: boo  4s  infinite;
 .av_hidden{
   position: absolute;right:16px;top:16px;cursor: pointer;
 }
+/* 7.31 */
+.usbStorage{
+  position: absolute;bottom: 85px;padding: 10px 0;width: 100%;opacity: 0.9; overflow: hidden; border-right: 1px solid #ddd; border-top: 1px solid #e6e6e6; background: #f6f6f6;display: flex; align-items: center;flex-direction: column;
+}
+.usbStorage .usbRow{
+  width: 100%; display: flex;justify-content:center;align-items: center;margin: 3px 0;
+}
+.usbStorage .usbPercent{
+  width: 40px;
+}
+.usbStorage .usbRow>div:first-child{
+  width: 40px;
+  text-align: right;
+}
+.usbStorage .usbProgress{
+  width: 100px;margin: 0 8px;border: 1px solid #ccc;border-radius: 15px;overflow: hidden;height: 6px;
+}
+.usbStorage .usbProgress div{
+  height: 100%;background: red;
+}
+.usb_mount{
+  position: fixed; top: 0; left: 0; width: 100%; height: 100%;display: flex;justify-content: center;align-items: center;z-index: 1001;background: rgba(255,255,255,0.5);
+}
+.usb_mount .usb_mount_sf{
+  background: #000;
+  opacity: 0.6;
+  margin: 0 auto;
+  color: #FFF;
+  border-radius: 6px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 70px;
+  padding:6px 20px;
+}
+.usb_mount  .usb_mount_sf div{
+  border-radius: 6px;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  font-size: 0;
+}
+.getusbsid_frame{
+  position: fixed;
+  z-index: 9999;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0,0,0,.2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.getusbsid_frame .frame_context{
+  width: 360px;
+    height: 260px;
+    background: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+.getusbsid_frame .frame_context_control{
+  display: flex;
+  justify-content: space-around;
+  height: 60px;
+}
+.getusbsid_frame .frame_context_value{
+  flex: 1; justify-content: center; align-items: center;display: flex;flex-direction: column;color: #000;font-size: 14px;
+}
+.getusbsid_frame .frame_context_value .value_row{
+  display: flex;
+  flex-direction: column;
+  width: 260px;
+}
+.getusbsid_frame .frame_context_value .value_row:first-child{
+  margin-bottom: 16px;
+}
+.getusbsid_frame .frame_context_value .value_row>div:first-child{
+  font-size: 18px;
+}
+.getusbsid_frame .frame_context_value img{
+  width: 80%;max-height: 150px;margin-bottom: 18px;
+}
+.getusbsid_frame a.button{
+  width: 90px;
+  height: 26px;
+  line-height: 26px;
+  text-decoration: none;
+  cursor: pointer;
+  font-size: 13px;
+  margin: 5px 10px 5px 0;
+  border: none;
+  display: inline-block;
+  border: 1px solid #ddd;
+  text-shadow: none;
+  box-shadow: none;
+  text-align: center;
+  font-weight: 400;
+  padding: 1px 8px;
+  background: #5db2ff;
+  color: #fff;
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  -ms-transition: all 0.2s;
+  transition: all 0.2s;
+}
