--- a/www/static/style/skin/metro/secros_app_explorer.css
+++ b/www/static/style/skin/metro/secros_app_explorer.css
@@ -1288,3 +1288,113 @@ animation: boo  4s  infinite;
   -ms-transition: all 0.2s;
   transition: all 0.2s;
 }
+/* 8.12 */
+
+.box_bordera {
+  width: 115px;
+  height: 115px;
+  padding: 3px;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(255,91,83,.5);
+  animation: rot_right 3s ease-in-out 0s infinite alternate;
+}
+
+.box_borderb {
+  width: 115px;
+  height: 115px;
+  padding: 3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(63,249,220,.5);
+  transform: rotate(45deg);
+  animation: rot_left 3s ease-in-out 0s infinite alternate;
+}
+
+.box_context {
+  width: 100%;
+  height: 100%;
+  background-color:rgba(0,0,0,.5);
+}
+.antivirus_alwayshidden{
+  position: absolute;bottom: 64px;left: 0; width: 100%;display: flex;justify-content: center;align-items: center;
+}
+
+.ant_update_text{
+  padding-top: 32px;z-index: 99;font-size:16px;
+}
+.close_antivirus{
+  width:18px;height:18px;position: absolute;right: 16px;top: 16px;cursor: pointer;
+}
+.ant_update_small{
+  position: fixed;
+    right: 0;
+    bottom: 30px;
+    padding: 10px 0;
+    width: 200px;
+    height: 80px;
+    opacity: 0.9;
+    overflow: hidden;
+    background: #f6f6f6;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-around;
+    box-shadow: 0 0 3px #000;
+}
+.ant_update_progress{
+  width: 100px;
+    margin: 0 8px;
+    border: 1px solid #ccc;
+    border-radius: 15px;
+    overflow: hidden;
+    height: 6px;
+}
+.ant_update_progress>div{
+  height: 100%;
+  background:rgb(24, 103, 206);
+}
+.ant_update_percent{
+  width: 40px;
+}
+.hidden_ant_update_small{
+  position: absolute;top: 6px;right: 6px;font-size: 12px;color:#999;cursor: pointer;z-index: 9;
+}
+@keyframes rot_right {
+  0% {
+    transform: rotate(0);
+  }
+  25% {
+    transform: rotate(90deg);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  75% {
+    transform: rotate(270deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes rot_left {
+  0% {
+    transform: rotate(45deg);
+  }
+  25% {
+    transform: rotate(-45deg);
+  }
+  50% {
+    transform: rotate(-135deg);
+  }
+  75% {
+    transform: rotate(-225deg);
+  }
+  100% {
+    transform: rotate(-315deg);
+  }
+}
