--- a/www/static/style/skin/metro/app_setting.css
+++ b/www/static/style/skin/metro/app_setting.css
@@ -517,3 +517,9 @@ align-items: center;
     background: #ccc!important;
     cursor: no-drop!important;
 }
+.platform .box_line{
+    border:none!important;
+}
+.platform  .box_line input[type='text']{
+    width: 180px!important;
+}
