--- a/www/static/style/skin/metro/secros_app_setting.css
+++ b/www/static/style/skin/metro/secros_app_setting.css
@@ -518,3 +518,18 @@ align-items: center;
     background: #ccc!important;
     cursor: no-drop!important;
 }
+.platform .box_line{
+    border:none!important;
+    padding:1px!important;
+}
+.platform  .box_line input[type='text']{
+    width: 180px!important;
+    padding: 0px!important;
+    height: 26px!important;
+    line-height: 26px!important;
+    text-indent: 10px;
+}
+.platform .box_line span.infotitle{
+    height: 28px!important;
+    line-height: 28px!important;
+}
