--- a/www/template/common/footer.html
+++ b/www/template/common/footer.html
@@ -1,7 +1,8 @@
 ﻿
 <div class="common_footer">
-	<div style="width:33%; float:left;"><?php echo $L['current_user'].': '.$_SESSION['secros_user']['name'];?></div>
-	<div style="width:33%; float:left;"><?php echo $L['system_model'].': '.$config['system_info']['MODEL'];?></div>
-	<div style="width:34%; float:left;"><?php echo $L['system_uptime'].': '.$config['system_info']['UPTIME'];?></div>
+	<div style="width:25%; float:left;"><?php echo $L['current_user'].': '.$_SESSION['secros_user']['name'];?></div>
+	<div style="width:25%; float:left;"><?php echo $L['system_model'].': '.$config['system_info']['MODEL'];?></div>
+	<div style="width:25%; float:left;"><?php echo $L['system_uptime'].': '.$config['system_info']['UPTIME'];?></div>
+	<div style="width:25%; float:left;" id="noc_status"><?php echo $L['setting_platform'].': '.$L['no_connect'];?></div>
 	<div style="clear:both"></div>
 </div> 
