Signed-off-by: chenqr <chenqr@anysec.com>

--- a/www/template/common/navbar.html
+++ b/www/template/common/navbar.html
@@ -13,7 +13,7 @@
 				?>
 			</a>
 		</div>
-		<div class="top_right">
+		<div class="top_right noc_a">
 			<div class="menu_group  noc_d">
 				<?php if ($GLOBALS['is_root'] == 1 || $_SESSION['super'] == 'super') {?>
 						<a href="javascript:core.setting('system');"><img src="<?php echo STATIC_PATH;?>images/settings.png"></a>
