Signed-off-by: chenqr <chenqr@anysec.com>

--- a/www/template/common/navbar.html
+++ b/www/template/common/navbar.html
@@ -9,7 +9,7 @@
 				if (isset($oem)){
 					$logoimage = STATIC_PATH."images/".$oem."-logo.gif";
 				}
-				echo '<img src="'.$logoimage.'" />';
+				echo '<img style="max-height: 50%;" src="'.$logoimage.'" />';
 				?>
 			</a>
 		</div>
