--- a/www/static/style/login.css
+++ b/www/static/style/login.css
@@ -21,14 +21,14 @@ a:hover{color:#fff;}
 	width:100%;height: 100%;
   	right: 0px;top: 0px; bottom: 0px;left: 0px;
 }
-.title{width:100%;height: 90px;
-    padding-top:0px;border-top-left-radius: 3px;border-top-right-radius: 3px;}
-.title .logo{text-align: center;}
+.title{width:100%;height:120px;display: flex;align-items: center;padding-top:0px;border-top-left-radius: 3px;border-top-right-radius: 3px;}
+.title .logo{    text-align: center;display: flex;justify-content: center;width: 100%;}
+.title .logo img{max-width: 60%;max-height: 120px;}
 .title .logo i{color:#aaddff;font-weight: 400;margin-right: 10px;}
 .title .info{text-align: right;font-size: 14px;color:#2da2f0;padding-right: 14px;padding-top:0px;}	
 
 .w80{width: 80px;}
-.inputs{padding: 30px 30px 0px 45px;}
+.inputs{padding:20px 30px 0px 45px;}
 .inputs div{margin-bottom: 15px;}
 .inputs div span{display: block;float: left;width:80px;line-height:30px;height:30px;}
 .inputs div input{height:33px;width: 240px;}
@@ -36,7 +36,7 @@ a:hover{color:#fff;}
 .inputs .check_code input{width:110px;display: block;float: left;}
 .inputs .check_code img{display: block;float: left;padding-left: 10px;width: 70px;height: 32px;}	
 
-.form{padding-top: 13px;}
+/* .form{padding-top: 13px;} */
 input,input:focus {outline: none; box-shadow: none; border: 1px solid #bbb;padding:3px 5px;}
 input:focus {border-color: #75A1F0; outline: none; box-shadow: 0 0 12px #75A1F0; 
 	-webkit-transition: all 0.218s; -moz-transition: all 0.218s; -o-transition: all 0.218s; -ms-transition: all 0.218s; transition: all 0.218s;}
