--- a/www/static/style/skin/metro/secros_app_explorer.css
+++ b/www/static/style/skin/metro/secros_app_explorer.css
@@ -46,6 +46,7 @@ input[type="radio"],input[type="checkbox"] { border: none; background: none;}
 .topbar .content .topbar_menu:hover,.topbar .content .topbar_menu.this { background: #0a56fa;}
 .topbar .content .topbar_menu.title { font-size: 20px; padding: 0; text-align: center;}
 .topbar .content .topbar_menu.title:hover { background: none;}
+.topbar .content .topbar_menu.go_back:hover img{filter: drop-shadow(2px 2px 2px #000);}
 .topbar .content .menu-desktop:before { content: "\f108";}
 .topbar .content .menu-explorer:before { content: "\f0ae";}
 .topbar .content .menu-editor:before { content: "\f044";}
